platformer/apps/active/default-env/deployment-active-default-env-3192360657.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    123$sds: 123$sds
    SJJSJSHS: SHSHHS12
    app_environment_id: 5d360e73-6534-4ba5-99ed-849daddad555
    b: test
    env_id: c392930e-6a09-470d-9de0-59a2372ceb08
    env_name: default-env
    organization_id: 6c869bc0-38b8-4504-bfed-9c5da7c8f15a
    platformer_app_id: 8e72a7ad-a394-42e3-be56-5c5e3463a0e4
    platformer_app_name: active
    platformer_component: rudder
    platformer_system: "true"
    project_id: 165f9b1a-b501-457f-902b-ac957491213c
  name: active-default-env-3192360657
  namespace: default-env1593166500865
spec:
  replicas: 1
  selector:
    matchLabels:
      app_environment_id: 5d360e73-6534-4ba5-99ed-849daddad555
      env_id: c392930e-6a09-470d-9de0-59a2372ceb08
      env_name: default-env
      organization_id: 6c869bc0-38b8-4504-bfed-9c5da7c8f15a
      platformer_app_id: 8e72a7ad-a394-42e3-be56-5c5e3463a0e4
      platformer_app_name: active
      platformer_component: rudder
      platformer_system: "true"
      project_id: 165f9b1a-b501-457f-902b-ac957491213c
  strategy: {}
  template:
    metadata:
      annotations:
        platformer.com/reload-hash: 8a7aa580-13bb-4c92-a836-b329c2024eb8
        test: "123123123"
      labels:
        app_environment_id: 5d360e73-6534-4ba5-99ed-849daddad555
        env_id: c392930e-6a09-470d-9de0-59a2372ceb08
        env_name: default-env
        organization_id: 6c869bc0-38b8-4504-bfed-9c5da7c8f15a
        platformer_app_id: 8e72a7ad-a394-42e3-be56-5c5e3463a0e4
        platformer_app_name: active
        platformer_component: rudder
        platformer_system: "true"
        project_id: 165f9b1a-b501-457f-902b-ac957491213c
    spec:
      containers:
      - args: []
        command: []
        image: ghost
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 8081
          name: port-8081
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 160Mi
        volumeMounts:
        - mountPath: /asda/sass
          name: ff1cc85e-1823-459a-9341-3e79f66682d6
          subPath: dsadsa
      imagePullSecrets: []
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
      - name: ff1cc85e-1823-459a-9341-3e79f66682d6
        secret:
          defaultMode: 420
          secretName: dsada-2825848930
