platformer/apps/active/default-env/ingress-active-1573938209.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: balanced
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
    platformer_ingress_id: 7bd29aab-27b6-46ed-aec9-6a14fdc1153c
  labels:
    platformer_ingress_id: 7bd29aab-27b6-46ed-aec9-6a14fdc1153c
  name: active-1573938209
  namespace: default-env1593166500865
spec:
  rules:
  - host: ""
    http:
      paths:
      - backend:
          serviceName: active-default-env-3192360657
          servicePort: 8080
        path: /
  tls: null
