platformer/apps/active/default-env/ingress-nov.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: balanced
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/permanent-redirect-code: "301"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
    platformer_ingress_id: dc468c64-c815-409b-988b-7a771c5b41d0
  labels:
    platformer_ingress_id: dc468c64-c815-409b-988b-7a771c5b41d0
  name: nov
  namespace: default-env1593166500865
spec:
  rules:
  - host: nov
    http:
      paths:
      - backend:
          serviceName: active-default-env-3192360657
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - nov
    secretName: nov-1605671761
